k8s/manifests-e8f974/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-e8f974
  namespace: journee
  labels:
    app: journee-e8f974
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-e8f974
  template:
    metadata:
      labels:
        app: journee-e8f974
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-e8f974
          image: gcr.io/my-docker-471807/journee:e8f974-dd91ae
          ports:
            - containerPort: 3000
