k8s/manifests-e8f974/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-e8f974
  namespace: journee
spec:
  selector:
    app: journee-e8f974
  ports:
    - port: 80
      targetPort: 3000
